2009-07-20  Xan Lopez  <xlopez@igalia.com>

Reviewed by Holger Freyther.

        https://bugs.webkit.org/show_bug.cgi?id=26716
        [Gtk] Each XMLHttpRequest leaks memory.

        Free the SoupURI we create to check the URI. Fix suggested by John
        Kjellberg.

        * platform/network/soup/ResourceHandleSoup.cpp:
        (WebCore::):

Canonical link: https://commits.webkit.org/37738@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@46117 268f45cc-cd09-0410-ab3c-d52691b4dbfc