WebCore/platform/network/soup/ResourceHandleSoup.cpp
@@ -583,7 +583,11 @@ bool ResourceHandle::start(Frame* frame)
     if (equalIgnoringCase(protocol, "data"))
         return startData(urlString);
 
-    if ((equalIgnoringCase(protocol, "http") || equalIgnoringCase(protocol, "https")) && SOUP_URI_VALID_FOR_HTTP(soup_uri_new(urlString.utf8().data())))
+    SoupURI* uri = soup_uri_new(urlString.utf8().data());
+    bool isHTTPOrHTTPS = (equalIgnoringCase(protocol, "http") || equalIgnoringCase(protocol, "https")) && SOUP_URI_VALID_FOR_HTTP(uri);
+    soup_uri_free(uri);
+
+    if (isHTTPOrHTTPS)
         return startHttp(urlString);
 
     if (equalIgnoringCase(protocol, "file") || equalIgnoringCase(protocol, "ftp") || equalIgnoringCase(protocol, "ftps"))
